tests/ui/empty_enum.stderr
error: explicit #[repr(...)] is required for enum without any variants
 --> tests/ui/empty_enum.rs:3:5
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
2 | mod ffi {
3 |     enum A {}
  |     ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
